fix(Styles): refactor services layout for improved responsiveness and spacing

--- a/src/sass/components/_services.scss
+++ b/src/sass/components/_services.scss
@@ -1,94 +1,63 @@
 .services {
   &__list {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 1.3rem;
 
-    @media (width <= 884px) {
-      grid-template-columns: repeat(2, 1fr);
-    }
+    &--row {
+      padding-bottom: 1.7rem;
 
-    @media (width <= 640px) {
-      grid-template-columns: repeat(1, 1fr);
-    }
-
-    &--card {
-      background-color: var(--bg-service-card);
-      padding: 1.4rem;
       display: grid;
-      gap: 1.1rem;
-      border-radius: 0.8rem;
-      border: 1px solid var(--border-services);
-      cursor: pointer;
-      transition: all 0.15s ease-in;
-
-      &:hover,
-      &:first-child {
-        background-color: var(--bg-service-hovered);
-        color: var(--text-service-hovered);
-        border: 1px solid transparent;
-        transform: rotate(-3.8deg);
-
-        & p {
-          color: var(--description-service-hovered);
-        }
-
-        & span {
-          gap: 0.35rem;
-        }
-      }
+      grid-template-columns: 90% auto;
+      gap: 1rem;
 
       &:first-child {
-        box-shadow: 0 0 10px var(--shadow-service);
-
-        & span {
-          gap: 0.1rem;
-        }
-
-        &:hover {
-          box-shadow: none;
-          transform: rotate(0);
-
-          & span {
-            gap: 0.35rem;
-            font-weight: 500;
-          }
-        }
+        padding-top: 1.1rem;
       }
 
-      & div {
-        display: grid;
-        gap: 0.8rem;
+      &:not(:first-child) {
+        padding-top: 1.7rem;
+      }
 
-        & svg {
-          width: 1.9rem;
-          height: 1.9rem;
-        }
+      &:not(:last-child) {
+        border-bottom: 1px solid var(--border-tertiary);
+      }
 
-        & h1 {
-          font-weight: 500;
-          font-size: 1rem;
-
-          @media (width <= 1280px) {
-            font-size: 0.94rem;
-          }
-
-          @media (width <= 640px) {
-            font-size: 0.94rem;
-          }
-        }
+      & h2 {
+        font-size: 1.1rem;
+        font-weight: 500;
+        margin-bottom: 0.4rem;
       }
 
       & p {
-        color: var(--text-secondary);
+        font-size: 1rem;
+
+        @media (width <= 1280px) {
+          font-size: 0.875rem;
+        }
       }
 
-      & span {
-        font-size: 0.75rem;
-        display: flex;
-        align-items: center;
-        gap: 0.3rem;
-        transition: all 0.1s ease-in;
+      & p,
+      & svg {
+        color: var(--text-tertiary);
+      }
+
+      & svg {
+        width: 1.3rem;
+        height: 1.3rem;
+        align-self: center;
+        justify-self: end;
+      }
+
+      &,
+      & svg {
+        transition: all 0.2s ease-in-out;
+      }
+
+      &:hover {
+        border-bottom: 1px solid var(--text-primary);
+
+        & svg {
+          color: var(--text-primary);
+        }
       }
     }
   }
